--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Olasubomi Badiru</h1>
-      <p>I'm a <span class="typed" data-typed-items="Software Developer, Student"></span></p>
+      <p>I'm <span class="typed" data-typed-items="an Artist, a Student, a Lover of the earth and everything she has to offer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -85,7 +85,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p> Soon to be Graduate</p>
+          <p> I guess I create art, and it's great, some people seem to think they're beautiful, so I'll take it. I'm just glad I get to do this tbh. Thanks for checking out my portfolio
+            I appreciate you being here!
+          </p>
         </div>
 
         <div class="row">
@@ -93,10 +95,10 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Software Developer.</h3>
-            <p class="fst-italic">
+            <h3>Artist.</h3>
+            <!-- <p class="fst-italic">
               Probably the best candidate you'd meet. Hire me ... please 😊
-            </p>
+            </p> -->
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -171,7 +173,7 @@
     <!-- End Facts Section -->
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
+    <!-- <section id="skills" class="skills section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -179,7 +181,7 @@
           <p>Below are my self-reviewed proficiencies and confidence levels with the respective proramming language.</p>
         </div>
 
-        <div class="row skills-content">
+        <div class="row skills-content"> -->
 
           <!-- <div class="col-lg-6" data-aos="fade-up">
 
@@ -206,7 +208,7 @@
 
           </div> -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
               <span class="skill">Python <i class="val">90%</i></span>
@@ -247,8 +249,9 @@
 
         </div>
 
-      </div>
-    </section><!-- End Skills Section -->
+      </div> -->
+    <!-- </section> -->
+    <!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
@@ -256,7 +259,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>introductory note to resume</p>
+          <!-- <p>introductory note to resume</p> -->
         </div>
 
         <div class="row">
@@ -264,9 +267,9 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Olasubomi Badiru</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <!-- <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p> -->
               <ul>
-                <li>Edmonotn AB, Canada</li>
+                <li>Edmonton AB, Canada</li>
                 <li>(780) 200-9763</li>
                 <li>badirusubomi@icloud.com</li>
               </ul>
@@ -287,7 +290,7 @@
               <p></p>
             </div>
           </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Software Engineering Internship</h4>
@@ -297,7 +300,7 @@
                 <li>Tasks I carried out</li>
               </ul>
             </div>
-          </div>
+          </div> -->
         </div>
 
       </div>
@@ -349,7 +352,7 @@
           <!-- Add more items to portfolio here -->
 
 
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -429,8 +432,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Events</h2>
+          <p>I've been priviledged to present art to friends and family over the years. Here are some of them</p>
         </div>
 
         <div class="row">
